<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <POU Name="F_PumpStationTurboPumpInterlock" Id="{450d1af3-fb15-4d29-896d-c5cf8ae3a359}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_PumpStationTurboPumpInterlock : BOOL
VAR_INPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[F_PumpStationTurboPumpInterlock := F_CompareGauge(eCompOp:= E_GaugeCompOp._LTE, fReading:=
										GVL_BTS_VAC.fb_PP_GPI_1.PG.rPRESS, 
										eState:= 0, 
										fExpReading:= PTM_INTERLOCK_SP, 
										eExpState:= 0)
									AND F_CompareGauge(eCompOp:= E_GaugeCompOp._LTE, fReading:=
										GVL_BTS_VAC.fb_PP_GPI_2.PG.rPRESS, 
										eState:= 0, 
										fExpReading:= PTM_INTERLOCK_SP, 
										eExpState:= 0)
									AND GVL_BTS_VAC.fb_PP_VVC.M_IsClosed()
									AND GVL_BTS_VAC.fb_PP_PMF.q_stPump.eState = E_PumpState.pumpRUNNING;]]></ST>
    </Implementation>
    <LineIds Name="F_PumpStationTurboPumpInterlock">
      <LineId Id="7" Count="4" />
      <LineId Id="15" Count="3" />
      <LineId Id="14" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="12" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>